Fixed loader z-index.

--- a/src/App.css
+++ b/src/App.css
@@ -288,6 +288,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 3;
 }
 
 .progress-bar-container.hidden {
